[package]
name = "eakio"
version = "0.1.0"
authors = ["Serho Liu <serholiu@gmail.com>"]

[dependencies]
ring = "0.12"
log = "0.3"
time = "0.1"
ansi_term = "0.9"
env_logger = "0.4"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
glob = "0.2"
walkdir = "2"
rpassword = "2.0"
scoped_threadpool = "0.1"
num_cpus = "1.7"
crossbeam = "0.3"
byteorder = "1"
